--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "create-readme": "^2.1.3",
-    "inquirer": "^6.3.1"
+    "inquirer": "^6.5.2"
   }
 }
